# linear_regression_ols_using_python_statsmodels

./: README.md  linear_regression_ols.ipynb  linear_regression_ols_v1.ipynb  linear_regression_ordinary_least_square.ipynb  linear_regression_ordinary_least_square_using_python_statsmodels.ipynb  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md  linear_regression_ols-checkpoint.ipynb  linear_regression_ols_v1-checkpoint.ipynb  linear_regression_ordinary_least_square-checkpoint.ipynb  linear_regression_ordinary_least_square_using_python_statsmodels-checkpoint.ipynb
dataset/: automobile_dataset.csv
